Update 1) Rock vs Mine Prediction.ipynb

--- a/1) Rock vs Mine Prediction/1) Rock vs Mine Prediction.ipynb
+++ b/1) Rock vs Mine Prediction/1) Rock vs Mine Prediction.ipynb
@@ -38,7 +38,7 @@
    "outputs": [],
    "source": [
     "#loading dataset to pd dataframe\n",
-    "sonar_data = pd.read_csv(r\"C:\\Users\\aagha\\python\\12)MACHINE LEARNING FULL COURSE\\DATASETS\\sonar data.csv\",header=None)\n",
+    "sonar_data = pd.read_csv('your dataset directory',header=None)\n",
     "    #we observe dataset to find there is no headers(or)column names\n",
     "    #so,we dont use header=None,itll consider 1st row of data as header,which should be avoided"
    ]
