--- a/2)Diabetis Prediction/2)Diabetis Prediction.ipynb
+++ b/2)Diabetis Prediction/2)Diabetis Prediction.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "#loading the dataset\n",
-    "diabetes_dataset = pd.read_csv(\"file directory of csv")"
+    "diabetes_dataset = pd.read_csv("file directory of csv")"
    ]
   },
   {
